--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "node-curb",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Interact with the Curb API",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src/ --out-dir dist --source-maps"
+    "build": "babel src/ --out-dir dist --source-maps",
+    "lint": "eslint -c .eslintrc ./src"
   },
   "author": "Brian Steere <dianoga7@3dgo.net>",
   "license": "MIT",
   "dependencies": {
-    "axios": "0.13.1",
-    "lodash": "4.15.0",
-    "mqtt": "1.13.0",
-    "url-search-params": "0.5.0"
+    "axios": "0.16.2",
+    "lodash": "4.17.4",
+    "mqtt": "2.8.2",
+    "socket.io-client": "^2.0.3",
+    "url-search-params": "0.9.0"
   },
   "devDependencies": {
-    "babel-cli": "6.11.4",
-    "babel-preset-es2015": "6.13.2"
+    "babel-cli": "6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-es2015": "6.24.1",
+    "eslint": "^3.0.0",
+    "eslint-config-smartthings": "^2.25.0"
   }
 }
