--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
 		"url-search-params": "0.9.0"
 	},
 	"devDependencies": {
-		"eslint": "8.6.0",
+		"@typescript-eslint/eslint-plugin": "^5.8.1",
+		"@typescript-eslint/parser": "^5.8.1",
+		"eslint": "^8.6.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"prettier": "2.5.1",
-		"typescript": "4.5.4"
+		"typescript": "^4.5.4"
 	}
 }
