--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "babel src/ --out-dir dist --source-maps",
-		"lint": "eslint -c .eslintrc ./src"
+		"lint": "eslint -c .eslintrc ./src",
+		"prepare": "husky install"
 	},
 	"author": "Brian Steere <dianoga7@3dgo.net>",
 	"license": "MIT",
@@ -16,19 +17,25 @@
 	"dependencies": {
 		"axios": "0.24.0",
 		"mqtt": "4.3.2",
-		"socket.io-client": "2.4.0",
+		"socket.io-client": "4.4.0",
 		"url-search-params": "0.9.0"
 	},
 	"devDependencies": {
-		"@types/node": "^17.0.6",
+		"@types/node": "17.0.6",
 		"@types/socket.io-client": "1.4.36",
-		"@typescript-eslint/eslint-plugin": "^5.8.1",
-		"@typescript-eslint/parser": "^5.8.1",
-		"eslint": "^8.6.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^4.0.0",
+		"@typescript-eslint/eslint-plugin": "5.8.1",
+		"@typescript-eslint/parser": "5.8.1",
+		"eslint": "8.6.0",
+		"eslint-config-prettier": "8.3.0",
+		"eslint-plugin-prettier": "4.0.0",
+		"husky": "7.0.4",
+		"lint-staged": "12.1.5",
 		"prettier": "2.5.1",
-		"ts-node-dev": "^1.1.8",
-		"typescript": "^4.5.4"
+		"ts-node-dev": "1.1.8",
+		"typescript": "4.5.4"
+	},
+	"lint-staged": {
+		"**/*": "eslint --cache --fix",
+		"**/*.ts?(x)": "tsc"
 	}
 }
