--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "node-curb",
-	"version": "3.0.0",
+	"version": "3.0.0-development",
 	"description": "Interact with the Curb API",
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
 		"lint": "eslint ./src",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"release": "semantic-release"
 	},
 	"author": "Brian Steere <dianoga7@3dgo.net>",
 	"license": "MIT",
@@ -32,10 +33,15 @@
 		"lint-staged": "12.1.5",
 		"prettier": "2.5.1",
 		"ts-node-dev": "1.1.8",
-		"typescript": "4.5.4"
+		"typescript": "4.5.4",
+		"semantic-release": "18.0.1"
 	},
 	"lint-staged": {
-		"**/*": "eslint --cache --fix",
-		"**/*.ts?(x)": "tsc"
+		"src/**/*": "eslint --cache --fix",
+		"src/**/*.ts?(x)": "tsc"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Dianoga/node-curb.git"
 	}
 }
