--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
 	"version": "3.0.0-development",
 	"description": "Interact with the Curb API",
 	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"scripts": {
 		"build": "tsc",
 		"lint": "eslint ./src",
 		"prepare": "husky install",
+		"prepublish": "npm run build",
 		"release": "semantic-release"
 	},
 	"author": "Brian Steere <dianoga7@3dgo.net>",
@@ -20,7 +22,6 @@
 	},
 	"dependencies": {
 		"axios": "0.24.0",
-		"mqtt": "4.3.2",
 		"socket.io-client": "2.4.0",
 		"url-search-params": "0.9.0"
 	},
